2012-02-25 arnaud.fontaine
* Remove useless DocumentConstraint Property Sheet for Document Component.

2012-02-24 arnaud.fontaine
* In Component view, show the error field in the left.

2012-02-24 arnaud.fontaine
* In Component view, display the error field with error CSS class to make it more visible.

2012-02-22 arnaud.fontaine
* Split up state and error message into two separate fields.
* Always set the Component state to modified upon modification, then check the consistency.

2012-02-21 arnaud.fontaine
* Do not update automatically the component module registry for reliability's sake.

2012-02-20 arnaud.fontaine
* Add Business Template action to import Document and Extensions automatically after giving the version.

2012-02-14 arnaud.fontaine
* Add component_interaction_workflow to Component Tool.

2012-02-11 arnaud.fontaine
* Update component module registry upon validate/invalidate.

2012-02-07 arnaud.fontaine
* Use resetOnceAtTransactionBoundary when a Component has been modified.

2012-02-02 arnaud.fontaine
* Perform revalidate automatically rather than requiring a manual action.

2012-02-01 arnaud.fontaine
* Replace comments by description field in Component_view.

2012-01-27 arnaud.fontaine
* For Component_view, add version, comments and validation state fields, and move editor field to the bottom to have more room for editing.

2012-01-27 arnaud.fontaine
* Use Ace editor to edit source code.

2012-01-27 arnaud.fontaine
* Add component_validation_workflow which supports revalidation.

2012-01-25 arnaud.fontaine
* Add missing skin folder.

2012-01-24 arnaud.fontaine
* Use DocumentComponent document class for Document Component Portal Type.

2012-01-23 arnaud.fontaine
* Rename DocumentComponent to Component.

2012-01-19 arnaud.fontaine
* Extension Component has now its own class (meaningful for importing from filesystem).

2012-01-18 arnaud.fontaine
* Complete ComponentTool view.
* Implement Extension Component.
* Complete ExtensionComponent view.