@@ -34,31 +34,30 @@
             <key> <string>before_commit_script_name</string> </key>
             <value>
               <list>
-                <string>Component_validateAfterModified</string>
+                <string>ComponentTool_reset</string>
               </list>
             </value>
         </item>
         <item>
             <key> <string>description</string> </key>
-            <value> <string></string> </value>
+            <value> <string>When a Component is validated or invalidated, all loaded Components are reset</string> </value>
         </item>
         <item>
             <key> <string>guard</string> </key>
             <value>
-              <persistent> <string encoding="base64">AAAAAAAAAAI=</string> </persistent>
+              <none/>
             </value>
         </item>
         <item>
             <key> <string>id</string> </key>
-            <value> <string>Component_modify</string> </value>
+            <value> <string>Component_reset</string> </value>
         </item>
         <item>
             <key> <string>method_id</string> </key>
             <value>
               <list>
-                <string>_setTextContent*</string>
-                <string>_setReference*</string>
-                <string>_setVersion*</string>
+                <string>validate</string>
+                <string>invalidate</string>
               </list>
             </value>
         </item>
@@ -78,9 +77,7 @@
         <item>
             <key> <string>script_name</string> </key>
             <value>
-              <list>
-                <string>Component_setModifiedState</string>
-              </list>
+              <tuple/>
             </value>
         </item>
         <item>
@@ -94,34 +91,6 @@
         <item>
             <key> <string>trigger_type</string> </key>
             <value> <int>2</int> </value>
-        </item>
-      </dictionary>
-    </pickle>
-  </record>
-  <record id="2" aka="AAAAAAAAAAI=">
-    <pickle>
-      <global name="Guard" module="Products.DCWorkflow.Guard"/>
-    </pickle>
-    <pickle>
-      <dictionary>
-        <item>
-            <key> <string>expr</string> </key>
-            <value>
-              <persistent> <string encoding="base64">AAAAAAAAAAM=</string> </persistent>
-            </value>
-        </item>
-      </dictionary>
-    </pickle>
-  </record>
-  <record id="3" aka="AAAAAAAAAAM=">
-    <pickle>
-      <global name="Expression" module="Products.CMFCore.Expression"/>
-    </pickle>
-    <pickle>
-      <dictionary>
-        <item>
-            <key> <string>text</string> </key>
-            <value> <string>python: here.getValidationState() in (\'validated\', \'modified\')</string> </value>
         </item>
       </dictionary>
     </pickle>
