@@ -67,7 +67,7 @@
         </item>
         <item>
             <key> <string>id</string> </key>
-            <value> <string>reset</string> </value>
+            <value> <string>ComponentTool_reset</string> </value>
         </item>
       </dictionary>
     </pickle>
